BuildHughes/translation-tool/inputs/source_meta/objects/Product_to_Attribute__c.object
<CustomObject>
    <description>Product to Attributes</description>
    <fields>
        <fullName>Attribute_ID__c</fullName>
        <formula>Attribute__r.Master_Attribute_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <formula>Attribute__r.Master_Attribute_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup reference to Master Attribute Object</description>
        <inlineHelpText>Lookup reference to Master Attribute Object</inlineHelpText>
        <label>Attribute</label>
        <referenceTo>Master_Attribute__c</referenceTo>
        <relationshipLabel>Product to Attributes</relationshipLabel>
        <relationshipName>Product_to_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Sequence__c</fullName>
        <description>Display Sequence</description>
        <inlineHelpText>Display Sequence</inlineHelpText>
        <label>Display Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HNS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product, Lookup Reference to HNS Product</description>
        <label>HNS Product</label>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>Product to Attributes</relationshipLabel>
        <relationshipName>Product_to_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRD_ATTR_ID__c</fullName>
        <description>Product  Attribute ID</description>
        <externalId>true</externalId>
        <label>PRD ATTR ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PRODUCT_AND_SEQUENCE_UNIQUE__c</fullName>
        <label>PRODUCT_AND_SEQUENCE_UNIQUE</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product to Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PATR-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product to Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>